--- a/WebDesign/web.css
+++ b/WebDesign/web.css
@@ -1,3 +1,10 @@
 body {
     background-color: #343434;
 }
+
+#title {
+    text-align: center;
+    font-family: Cambria;
+    color: whitesmoke;
+}
+
